Overhauled ImageProcessor